@@ -4,6 +4,7 @@
 	- Add define for strtoull => _strtoui64 to fix Win32 compile.
 	- Use libmseed's msr_duplicate() for template instead of the
 	brute force copy.
+	- Fix adding of too many blockette 100s in corner cases.
 
 2006.208: version 1.4
 	- Update libmseed to 1.8.
